--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,14 +1,18 @@
+@import '../../style.scss';
+
 .app {
     width: 100%;
     padding: 35px;
     display: flex;
     justify-content: center;
+    @include mobile {
+        padding: 17.5px;
+    }
     .content {
         width: 100%;
-        max-width: 500px;
+        max-width: 700px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        
     }
 }
