--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,4 +9,8 @@
     font-size: 35px;
     text-align: center;
     border-radius: 7px;
+    @include mobile {
+        margin-bottom: 17.5px;
+        padding: 17.5px;
+    }
 }
