--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -14,6 +14,10 @@
         border-radius: 7px;
         border: 1px solid $secondary;
         background-color: $primary;
+        @include mobile {
+            margin-top: 17.5px;
+            padding: 17.5px;
+        }
         .finished {
             width: 70px;
             height: 70px;
