--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,5 +1,3 @@
-@import '../../style.scss';
-
 .form {
     padding: 35px;
     width: 100%;
@@ -21,6 +19,7 @@
         border: 1px solid $secondary;
         @include mobile {
             margin: 0 17.5px;
+            height: 50px;
         }
         &:hover, &:focus {
             border-color: $accent;
@@ -33,6 +32,10 @@
         background-color: $accent;
         border-radius: 7px;
         border: 1px solid $accent;
+        @include mobile {
+            width: 50px;
+            height: 50px;
+        }
         &:hover {
             opacity: 0.7;
         }
