--- a/src/styles/components/_todos.scss
+++ b/src/styles/components/_todos.scss
@@ -1,5 +1,3 @@
-@import '../../style.scss';
-
 .todos {
     width: 100%;
     display: flex;
@@ -25,6 +23,10 @@
             background-color: $primary;
             border-radius: 7px;
             border: 1px solid $secondary;
+            @include mobile {
+                width: 50px;
+                height: 50px;
+            }
             &:hover {
                 border-color: $accent;
             }
@@ -33,8 +35,7 @@
                 color: $accent;
             }
         }
-        .title {
-            font-size: 17.5px;
+        input {
             text-align: center;
         }
         .delete {
@@ -43,6 +44,10 @@
             flex-shrink: 0;
             background-color: $accent;
             border-radius: 7px;
+            @include mobile {
+                width: 50px;
+                height: 50px;
+            }
             &:hover {
                 opacity: 0.7;
             }
@@ -52,5 +57,4 @@
             }
         }
     }
-    
 }
