--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,3 +46,25 @@ h1 {
 a {
     text-decoration: none;
 }
+
+.app {
+    width: 100%;
+    padding: 35px;
+    display: flex;
+    justify-content: center;
+    @include mobile {
+        padding: 17.5px;
+    }
+    .content {
+        width: 100%;
+        max-width: 700px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@import 'components/_background';
+@import 'components/_header';
+@import 'components/_form';
+@import 'components/_todos';
