--- a/src/styles/components/_todo.scss
+++ b/src/styles/components/_todo.scss
@@ -1,37 +1,44 @@
-.form {
+.todo {
+    margin-top: 35px;
     padding: 35px;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     border-radius: 7px;
     border: 1px solid $secondary;
     background-color: $primary;
     @include mobile {
         padding: 17.5px;
     }
-    input {
-        margin: 0 35px;
-        padding: 17.5px;
-        width: 100%;
+    .finished {
+        width: 70px;
         height: 70px;
+        flex-shrink: 0;
+        background-color: $primary;
         border-radius: 7px;
         border: 1px solid $secondary;
         @include mobile {
-            margin: 0 17.5px;
+            width: 50px;
             height: 50px;
         }
-        &:hover, &:focus {
+        &:hover {
             border-color: $accent;
         }
+        .icon {
+            font-size: 17.5px;
+            color: $accent;
+        }
     }
-    button {
+    input {
+        text-align: center;
+    }
+    .delete {
         width: 70px;
         height: 70px;
         flex-shrink: 0;
         background-color: $accent;
         border-radius: 7px;
-        border: 1px solid $accent;
         @include mobile {
             width: 50px;
             height: 50px;
